--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
 .outer-container {
      /* width: 100vw; */
 
-     border: 3px solid blue;
+    // border: 3px solid blue;
 }
 /* header start */
 
